# nxp-vee-imxrt1170-evk

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE.txt  Makefile  Makefile.inc  README.md  SCR-nxpvee-mimxrt1170-evk.txt  build.gradle.kts  settings.gradle.kts  west.yml
MIMXRT1170-Platform-CM7hardfp_GCC48-1.0.0/: .project
MIMXRT1170-configuration/: .project  MIMXRT1170.platform  configuration.xml  module.ant  module.ivy  module.properties  override.module.ant
MIMXRT1170-configuration/bsp/: bsp.properties
MIMXRT1170-configuration/display/: display.properties
MIMXRT1170-configuration/frontpanel/: frontpanel.properties
MIMXRT1170-configuration/fs/: fs.properties
MIMXRT1170-configuration/microui/: microui.xml
MIMXRT1170-configuration/microui/resources/fonts/: license.txt
MIMXRT1170-configuration/microvg/: microvg.properties
MIMXRT1170-evk_platform-CM7hardfp_GCC48-2.0.0/: .project
MIMXRT1170-evk_platform-CM7hardfp_GCC48-2.1.0/: .project
MIMXRT1170-evk_platform-CM7hardfp_GCC48-2.1.1/: .project
MIMXRT1170-fp/: .project  module.ivy
MIMXRT1170-fp/src/main/resources/: MIMXRT1170-fp.fp
MIMXRT1170-imageGenerator/: module.ivy
apps/HelloWorld/: README.md  build.gradle.kts
apps/aiSample/: build.gradle.kts
apps/aiSample/configuration/: common.properties
apps/animatedMascot/: README.md  build.gradle.kts
apps/simpleGFX/: build.gradle.kts
bsp/: .project
bsp/projects/common/scripts/: s2s.bat  s2s.sh
bsp/projects/common/sdk_makefile/: Makefile
bsp/projects/common/segger/: SEGGER_SYSVIEW_FreeRTOS.c  (+1 more)
bsp/projects/microej/: README.rst  cco_freetype.properties  cco_fs-generic.properties  cco_harfbuzz.properties  cco_microui-vglite.properties  cco_microui.properties  cco_microvg-vglite.properties  cco_microvg.properties  cco_trace-systemview.properties
bsp/projects/nxpvee-ui/armgcc/: CMakeLists.txt  CMakePresets.json  MIMXRT1176xxxxx_cm7_flexspi_nor_sdram.ld  build_all.bat  build_all.sh  build_flexspi_nor_sdram_debug_evk.bat  build_flexspi_nor_sdram_debug_evkb.bat  build_flexspi_nor_sdram_debug_evkb.sh  build_flexspi_nor_sdram_release_evk.bat  build_flexspi_nor_sdram_release_evk.sh  build_flexspi_nor_sdram_release_evkb.bat  clean.bat  clean.sh  config.cmake  flags.cmake
bsp/vee/scripts/: clean.sh  set_project_env.bat  set_project_env.sh
bsp/vee/scripts/armgcc/: CMakeLists.txt  CMakePresets.json  MIMXRT1176xxxxx_cm7_flexspi_nor_sdram.ld  build_all.bat  build_flexspi_nor_sdram_debug_evk.bat  build_flexspi_nor_sdram_debug_evk.sh  build_flexspi_nor_sdram_debug_evkb.bat  build_flexspi_nor_sdram_release_evk.bat  build_flexspi_nor_sdram_release_evkb.bat  build_flexspi_nor_sdram_release_evkb.sh  config.cmake  flags.cmake
gradle/: libs.versions.toml
microej/MIMXRT1170-evk_platform-CM7hardfp_GCC48-2.2.0/: .project
microej/apps/: module.ant  module.ivy
microej/apps/launchers/: AnimatedMascot (EMB).launch  AnimatedMascot (SIM).launch  SimpleGFX (SIM).launch
microej/front-panel/: .classpath  module.ivy
microej/imageGenerator/: .classpath  .project
microej/mock/: .project
microej/validation/ecom-wifi/: README.rst
microej/validation/vg/: README.rst
microej/vee-port-configuration/: .gitignore  MIMXRT1170.platform  configuration.xml  module.ivy  module.properties
microej/vee-port-configuration/bsp/: bsp.properties
microej/vee-port-configuration/display/: display.properties
microej/vee-port-configuration/frontpanel/: frontpanel.properties
microej/vee-port-configuration/mjvm/: mjvm.properties
nxpvee-mimxrt1170-evk-apps/: .project  module.ivy
nxpvee-mimxrt1170-evk-apps/launchers/: AnimatedMascot (EMB).launch  AnimatedMascot (SIM).launch  SimpleGFX (EMB).launch  SimpleGFX (SIM).launch
nxpvee-mimxrt1170-evk-bsp/projects/microej/: README.rst  cco_freetype.properties  cco_fs-fatfs.properties  cco_microui-vglite.properties  cco_microui.properties  cco_microvg-vglite.properties  cco_microvg.properties
nxpvee-mimxrt1170-evk-bsp/projects/nxpvee-ui/armgcc/: CMakeLists.txt  MIMXRT1176xxxxx_cm7_flexspi_nor_sdram.ld  build_all.bat  build_all.sh  build_flexspi_nor_sdram_debug.bat  build_flexspi_nor_sdram_debug.sh  build_flexspi_nor_sdram_release.bat  build_flexspi_nor_sdram_release.sh  build_sdram_debug.bat  build_sdram_debug.sh  build_sdram_release.bat  build_sdram_release.sh  clean.bat  clean.sh  config.cmake  flags.cmake
nxpvee-mimxrt1170-evk-validation/core/java-testsuite-runner-core/: config.properties
nxpvee-mimxrt1170-evk-validation/fs/java-testsuite-runner-fs/: config.properties  module.ivy
nxpvee-mimxrt1170-evk-validation/net/java-testsuite-runner-net/: config.properties
nxpvee-mimxrt1170-evk-validation/security/java-testsuite-runner-security/: config.properties
nxpvee-mimxrt1170-evk-validation/ssl/java-testsuite-runner-ssl/: config.properties  module.ivy
nxpvee-mimxrt1170-evk-validation/ui/ui3/: README.rst
nxpvee-mimxrt1170-evk-validation/vg/: README.rst
nxpvee-mimxrt1170-evk-validation/vg/java-testsuite-runner-vg/: CHANGELOG.rst  config.properties  config.properties.tpl  module.ivy
vee-port/: build.gradle.kts
vee-port/dropins/gpio/: gpio.properties
vee-port/extensions/front-panel/: build.gradle.kts
vee-port/extensions/image-generator/: build.gradle.kts
vee-port/extensions/microui/: microui.xml
vee-port/mock/: build.gradle.kts
vee-port/validation/ai/: CHANGELOG.md  LICENSE.txt  README.md  build.gradle.kts  config.properties
vee-port/validation/core/: README.md  build.gradle.kts  config.properties
vee-port/validation/ecom-wifi/: CHANGELOG.md  README.md  build.gradle.kts  config.properties  config.properties.tpl
vee-port/validation/event-queue/: build.gradle.kts
vee-port/validation/fs/: CHANGELOG.md  build.gradle.kts
vee-port/validation/net/: CHANGELOG.md  README.md  build.gradle.kts
vee-port/validation/security/: CHANGELOG.md
vee-port/validation/ssl/: CHANGELOG.md  build.gradle.kts
vee-port/validation/ui/: CHANGELOG.md  README.md  build.gradle.kts  config.properties  config.properties.tpl
vee-port/validation/vg/: CHANGELOG.md  README.md  build.gradle.kts  config.properties  config.properties.tpl
(+718 files in other folders)
